# dtc-knowledge-management

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
1_ingestion/: README.md  extract_subtitles.ipynb  extract_transcripts.py  extract_yt_urls.ipynb  ml_zoomcamp_metadata.json  utils.py
1_ingestion/dash_app/: analytics.ipynb  analytics.py  plotly-cloud.toml  plotly-cloud.toml.bak  requirements.txt
1_ingestion/s3_bucket/: .terraform.lock.hcl  main.tf
1_ingestion/test_transcripts/: ML Zoomcamp 6.7 - Gradient Boosting and XGBoost.en.json3  ML Zoomcamp 6.7 - Gradient Boosting and XGBoost.en.vtt
1_ingestion/transcripts_module1/: transcript_0j3XK5PsnxA.json  transcript_CeukwyUdaz8.json  transcript_Crm_5n4mvmg.json  transcript_OH_R0Sl9neM.json  transcript_Qa0-jYtRdbY.json  transcript_VRrEEVeJ440.json  transcript_dCa3JvmJbr0.json  transcript_j9kcEuGcC2Y.json  transcript_pqQFlV3f9Bo.json  transcript_zZyKUeOR4Gg.json
2_prompting/: base_prompt.ipynb  base_prompt.py  calculate_cost.ipynb  calculate_tokens.ipynb  generate_course_notes.py  generate_course_notes_log.jsonl  prompt_module1.ipynb  prompt_module1_per_video.ipynb  utils.py
2_prompting/calculate_tokens/: calculate_tokens_app.py
2_prompting/display_test_results_streamlit/: display_test_results_streamlit.py
2_prompting/results/: llm_response_xFarGClszEM.md  module1_iteration1.md
2_prompting/results_module1_per_video/: 0j3XK5PsnxA.md  CeukwyUdaz8.md  Crm_5n4mvmg.md  OH_R0Sl9neM.md  Qa0-jYtRdbY.md  (+5 more)
3_screenshots/: test_llm_output.ipynb  test_one_ss.ipynb  utils.py
(+3 files in other folders)
