[project]
name = "dtc-project-unified-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
]
